src/main/java/cool/parser/CoolParser.java
// Generated from C:/Users/alin/Downloads/tema22/src/main/java/cool/parser\CoolParser.g4 by ANTLR 4.7
package cool.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ERROR=1, CLASS=2, INHERITS=3, NOT=4, TIL=5, ISVOID=6, NEW=7, IF=8, THEN=9, 
		ELSE=10, FI=11, BOOL=12, WHILE=13, LOOP=14, POOL=15, LET=16, IN=17, CASE=18, 
		ESAC=19, OF=20, REZULTA=21, TYPE=22, ID=23, PV=24, INT=25, AS=26, AD=27, 
		DP=28, PS=29, PD=30, VIRGULA=31, STRING=32, PLUS=33, MINUS=34, INM=35, 
		IMP=36, PUNCT=37, AT=38, ATRIBUIRE=39, COMMENT=40, INEGALITATI=41, EGALITATE=42, 
		WS=43, BLOCK_COMMENT=44, NEWLINE=45;
	public static final int
		RULE_program = 0, RULE_classxx = 1, RULE_featurexx = 2, RULE_formalxx = 3, 
		RULE_expresiexx = 4, RULE_ifbody = 5, RULE_ifthen = 6, RULE_ifelse = 7, 
		RULE_ifcond = 8, RULE_whilehead = 9, RULE_letcorp = 10, RULE_letbody = 11, 
		RULE_casebody = 12;
	public static final String[] ruleNames = {
		"program", "classxx", "featurexx", "formalxx", "expresiexx", "ifbody", 
		"ifthen", "ifelse", "ifcond", "whilehead", "letcorp", "letbody", "casebody"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#'", "'class'", "'inherits'", "'not'", "'~'", "'isvoid'", "'new'", 
		"'if'", "'then'", "'else'", "'fi'", null, "'while'", "'loop'", "'pool'", 
		"'let'", "'in'", "'case'", "'esac'", "'of'", "'=>'", null, null, "';'", 
		null, "'{'", "'}'", "':'", "'('", "')'", "','", null, "'+'", "'-'", "'*'", 
		"'/'", "'.'", "'@'", "'<-'", null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ERROR", "CLASS", "INHERITS", "NOT", "TIL", "ISVOID", "NEW", "IF", 
		"THEN", "ELSE", "FI", "BOOL", "WHILE", "LOOP", "POOL", "LET", "IN", "CASE", 
		"ESAC", "OF", "REZULTA", "TYPE", "ID", "PV", "INT", "AS", "AD", "DP", 
		"PS", "PD", "VIRGULA", "STRING", "PLUS", "MINUS", "INM", "IMP", "PUNCT", 
		"AT", "ATRIBUIRE", "COMMENT", "INEGALITATI", "EGALITATE", "WS", "BLOCK_COMMENT", 
		"NEWLINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CoolParser.EOF, 0); }
		public List<ClassxxContext> classxx() {
			return getRuleContexts(ClassxxContext.class);
		}
		public ClassxxContext classxx(int i) {
			return getRuleContext(ClassxxContext.class,i);
		}
		public List<TerminalNode> PV() { return getTokens(CoolParser.PV); }
		public TerminalNode PV(int i) {
			return getToken(CoolParser.PV, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				classxx();
				setState(27);
				match(PV);
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassxxContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(CoolParser.CLASS, 0); }
		public List<TerminalNode> TYPE() { return getTokens(CoolParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(CoolParser.TYPE, i);
		}
		public TerminalNode AS() { return getToken(CoolParser.AS, 0); }
		public TerminalNode AD() { return getToken(CoolParser.AD, 0); }
		public TerminalNode INHERITS() { return getToken(CoolParser.INHERITS, 0); }
		public List<FeaturexxContext> featurexx() {
			return getRuleContexts(FeaturexxContext.class);
		}
		public FeaturexxContext featurexx(int i) {
			return getRuleContext(FeaturexxContext.class,i);
		}
		public List<TerminalNode> PV() { return getTokens(CoolParser.PV); }
		public TerminalNode PV(int i) {
			return getToken(CoolParser.PV, i);
		}
		public ClassxxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classxx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterClassxx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitClassxx(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitClassxx(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassxxContext classxx() throws RecognitionException {
		ClassxxContext _localctx = new ClassxxContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classxx);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(CLASS);
			setState(36);
			match(TYPE);
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(37);
				match(INHERITS);
				setState(38);
				match(TYPE);
				}
			}

			setState(41);
			match(AS);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(42);
				featurexx();
				setState(43);
				match(PV);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(AD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeaturexxContext extends ParserRuleContext {
		public FeaturexxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featurexx; }
	 
		public FeaturexxContext() { }
		public void copyFrom(FeaturexxContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AtributContext extends FeaturexxContext {
		public TerminalNode ID() { return getToken(CoolParser.ID, 0); }
		public TerminalNode DP() { return getToken(CoolParser.DP, 0); }
		public TerminalNode TYPE() { return getToken(CoolParser.TYPE, 0); }
		public TerminalNode ATRIBUIRE() { return getToken(CoolParser.ATRIBUIRE, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public AtributContext(FeaturexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterAtribut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitAtribut(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitAtribut(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctieContext extends FeaturexxContext {
		public TerminalNode ID() { return getToken(CoolParser.ID, 0); }
		public TerminalNode PS() { return getToken(CoolParser.PS, 0); }
		public TerminalNode PD() { return getToken(CoolParser.PD, 0); }
		public TerminalNode DP() { return getToken(CoolParser.DP, 0); }
		public TerminalNode TYPE() { return getToken(CoolParser.TYPE, 0); }
		public TerminalNode AS() { return getToken(CoolParser.AS, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public TerminalNode AD() { return getToken(CoolParser.AD, 0); }
		public List<FormalxxContext> formalxx() {
			return getRuleContexts(FormalxxContext.class);
		}
		public FormalxxContext formalxx(int i) {
			return getRuleContext(FormalxxContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(CoolParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(CoolParser.VIRGULA, i);
		}
		public FunctieContext(FeaturexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterFunctie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitFunctie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitFunctie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeaturexxContext featurexx() throws RecognitionException {
		FeaturexxContext _localctx = new FeaturexxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_featurexx);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new FunctieContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(ID);
				setState(53);
				match(PS);
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(54);
					formalxx();
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==VIRGULA) {
						{
						{
						setState(55);
						match(VIRGULA);
						setState(56);
						formalxx();
						}
						}
						setState(61);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(67);
				match(PD);
				setState(68);
				match(DP);
				setState(69);
				match(TYPE);
				setState(70);
				match(AS);
				setState(71);
				expresiexx(0);
				setState(72);
				match(AD);
				}
				break;
			case 2:
				_localctx = new AtributContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(ID);
				setState(75);
				match(DP);
				setState(76);
				match(TYPE);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ATRIBUIRE) {
					{
					setState(77);
					match(ATRIBUIRE);
					setState(78);
					expresiexx(0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalxxContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CoolParser.ID, 0); }
		public TerminalNode DP() { return getToken(CoolParser.DP, 0); }
		public TerminalNode TYPE() { return getToken(CoolParser.TYPE, 0); }
		public FormalxxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalxx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterFormalxx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitFormalxx(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitFormalxx(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalxxContext formalxx() throws RecognitionException {
		FormalxxContext _localctx = new FormalxxContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formalxx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(84);
			match(DP);
			setState(85);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresiexxContext extends ParserRuleContext {
		public ExpresiexxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresiexx; }
	 
		public ExpresiexxContext() { }
		public void copyFrom(ExpresiexxContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NewContext extends ExpresiexxContext {
		public TerminalNode NEW() { return getToken(CoolParser.NEW, 0); }
		public TerminalNode TYPE() { return getToken(CoolParser.TYPE, 0); }
		public NewContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterNew(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitNew(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitNew(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MinusContext extends ExpresiexxContext {
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(CoolParser.MINUS, 0); }
		public MinusContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EgalContext extends ExpresiexxContext {
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public TerminalNode EGALITATE() { return getToken(CoolParser.EGALITATE, 0); }
		public EgalContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterEgal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitEgal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitEgal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContext extends ExpresiexxContext {
		public TerminalNode STRING() { return getToken(CoolParser.STRING, 0); }
		public StringContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolContext extends ExpresiexxContext {
		public TerminalNode BOOL() { return getToken(CoolParser.BOOL, 0); }
		public BoolContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunccallContext extends ExpresiexxContext {
		public TerminalNode ID() { return getToken(CoolParser.ID, 0); }
		public TerminalNode PS() { return getToken(CoolParser.PS, 0); }
		public TerminalNode PD() { return getToken(CoolParser.PD, 0); }
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(CoolParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(CoolParser.VIRGULA, i);
		}
		public FunccallContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterFunccall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitFunccall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitFunccall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsvoidContext extends ExpresiexxContext {
		public TerminalNode ISVOID() { return getToken(CoolParser.ISVOID, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public IsvoidContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterIsvoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitIsvoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitIsvoid(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InmContext extends ExpresiexxContext {
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public TerminalNode INM() { return getToken(CoolParser.INM, 0); }
		public InmContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterInm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitInm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitInm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyContext extends ExpresiexxContext {
		public TerminalNode AS() { return getToken(CoolParser.AS, 0); }
		public TerminalNode AD() { return getToken(CoolParser.AD, 0); }
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public List<TerminalNode> PV() { return getTokens(CoolParser.PV); }
		public TerminalNode PV(int i) {
			return getToken(CoolParser.PV, i);
		}
		public BodyContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImpContext extends ExpresiexxContext {
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public TerminalNode IMP() { return getToken(CoolParser.IMP, 0); }
		public ImpContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterImp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitImp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitImp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusContext extends ExpresiexxContext {
		public List<ExpresiexxContext> expresiexx() {
			return getRuleContexts(ExpresiexxContext.class);
		}
		public ExpresiexxContext expresiexx(int i) {
			return getRuleContext(ExpresiexxContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(CoolParser.PLUS, 0); }
		public PlusContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitPlus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileloopContext extends ExpresiexxContext {
		public WhileheadContext whilehead() {
			return getRuleContext(WhileheadContext.class,0);
		}
		public TerminalNode LOOP() { return getToken(CoolParser.LOOP, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public TerminalNode POOL() { return getToken(CoolParser.POOL, 0); }
		public WhileloopContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterWhileloop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitWhileloop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitWhileloop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotContext extends ExpresiexxContext {
		public TerminalNode NOT() { return getToken(CoolParser.NOT, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public NotContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InttContext extends ExpresiexxContext {
		public TerminalNode INT() { return getToken(CoolParser.INT, 0); }
		public InttContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterIntt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitIntt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitIntt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CaseeContext extends ExpresiexxContext {
		public TerminalNode CASE() { return getToken(CoolParser.CASE, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public TerminalNode OF() { return getToken(CoolParser.OF, 0); }
		public TerminalNode ESAC() { return getToken(CoolParser.ESAC, 0); }
		public List<CasebodyContext> casebody() {
			return getRuleContexts(CasebodyContext.class);
		}
		public CasebodyContext casebody(int i) {
			return getRuleContext(CasebodyContext.class,i);
		}
		public CaseeContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterCasee(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitCasee(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitCasee(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TilContext extends ExpresiexxContext {
		public TerminalNode TIL() { return getToken(CoolParser.TIL, 0); }
		public ExpresiexxContext expresiexx() {
			return getRuleContext(ExpresiexxContext.class,0);
		}
		public TilContext(ExpresiexxContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterTil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitTil(this);
		}
